# game

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DOCKER_DEPLOYMENT.md  DOCKER_FILES_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_VERIFICATION.md  Dockerfile  FIX_LARGE_FILES.md  GIT_PUSH_GUIDE.md  LARGE_FILES_SUMMARY.md  Makefile.docker  QUICK_FIX_LARGE_FILES.md  README.md  build-docker.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix-large-files.sh  vcpkg.json
benchmarks/: CMakeLists.txt  combat_core_benchmark.cpp  ecs_performance_benchmark.cpp
src/client/: CMakeLists.txt  main.cc
src/client/audio/: audio_engine.cc  audio_engine.h
src/client/core/: application.cc  application.h  event_dispatcher.cc  event_dispatcher.h  path_utils.cc  path_utils.h  position_interpolator.h  sdl_resource.h  timer.cc  timer.h
src/client/game/: actor_data.cc  actor_data.h  client_character.h  entity_manager.cc  entity_manager.h  game_client.cc  game_client.h  movement_controller.h
src/client/handlers/: character_handler.cpp  character_handler.h  combat_handler.cpp  combat_handler.h  effect_handler.cc  effect_handler.h  handler_registry.cpp  handler_registry.h  login_handler.cpp  login_handler.h  movement_handler.cpp  movement_handler.h  npc_handler.cpp  npc_handler.h  skill_handler.cc  skill_handler.h  system_handler.cpp  system_handler.h
src/client/network/: i_network_manager.h  message_dispatcher.cpp  message_dispatcher.h  network_client.cc  network_client.h  network_manager.cpp  network_manager.h
src/client/render/: actor_renderer.cc  actor_renderer.h  animation.cc  animation.h  camera.h  effect_player.cc  effect_player.h  i_renderer.h  i_texture_cache.h  renderer.cc  renderer.h  texture.h
src/client/resource/: async_loader.cc  async_loader.h  i_resource_provider.h  resource_loader.cpp  resource_loader.h
src/client/scene/: login_scene.cc  login_scene.h  scene_manager.cc  scene_manager.h
src/client/ui/: input_validation.cc  input_validation.h  login_screen.cc  login_screen.h  npc_dialog_ui.cpp  npc_dialog_ui.h  ui_layout_calculator.cc  ui_layout_calculator.h  ui_layout_constants.h  ui_layout_loader.cc  ui_layout_loader.h  ui_manager.h  ui_renderer.cc  ui_renderer.h
src/common/: CMakeLists.txt  character_data.cpp  character_data.h  constants.h  database.cpp  database.h  enums.h  skill_ids.h  types.cpp  types.h  version.h.in
src/common/protocol/: message_codec.cpp  message_codec.h  message_types.h  npc_message_codec.cpp  npc_message_codec.h  packet_codec.cpp  packet_codec.h  skill_result.h
src/common/types/: character_stats.h  constants.h  database_types.h  error_codes.h  types.h
src/server/: CMakeLists.txt
src/server/apps/: db_main.cc  game_main.cc  gateway_main.cc  world_main.cc
src/server/combat/: combat_core.cpp  combat_core.h
src/server/common/: error_codes.h  internal_message_helper.cc  internal_message_helper.h  snowflake_id.h
src/server/config/: config_manager.cc  config_manager.h  map_config_loader.cc  map_config_loader.h  skill_config_loader.cc  skill_config_loader.h
src/server/core/: application.cc  application.h  non_copyable.h  singleton.h  timer.cc  timer.h  utils.cc  utils.h
src/server/db/: character_repository.cc  character_repository.h  database_manager.cc  database_manager.h  database_types.h  db_server.cc  db_server.h  pg_connection_pool.cc  pg_connection_pool.h  postgres_database.cc  postgres_database.h  redis_cache.cc  redis_cache.h  redis_manager.cc  redis_manager.h
src/server/ecs/: README.md  THREADING.md  character_entity_manager.cc  character_entity_manager.h  dirty_tracker.h  event_bus.h  inventory_migration.cc  inventory_migration.h  registry_manager.cc  registry_manager.h  skill_registry.cc  skill_registry.h  world.cc  world.h
src/server/game/: game_server.cc  game_server.h
src/server/gateway/: gateway_server.cc  gateway_server.h  message_router.cc  message_router.h
src/server/handlers/: base_handler.cc  base_handler.h  client_registry.cc  client_registry.h  handler_registry.cc  handler_registry.h  handler_utils.h  merchant_handler.cc  merchant_handler.h
src/server/legacy/: character.h  character_factory.cc  character_factory.h  inventory_system.cpp  inventory_system.h  legacy_monster_adapter.cc  legacy_monster_adapter.h  monster.h  monster_ai.h  (+3 more)
tests/: CMakeLists.txt
tests/client/: character_handler_test.cpp  combat_handler_test.cpp  handler_registry_test.cpp  handlers_integration_test.cpp  login_flow_manager_test.cpp  login_handler_test.cpp  message_dispatcher_test.cpp  monster_manager_test.cc  movement_handler_test.cpp  network_manager_test.cpp  npc_handler_test.cpp  scene_integration_test.cpp  scene_state_machine_test.cpp  system_handler_test.cpp
tests/common/: database_test.cpp  kick_message_test.cpp  message_codec_test.cpp  npc_message_codec_test.cpp  packet_codec_test.cpp  routing_table_test.cpp  snowflake_id_test.cpp  tcp_session_test.cpp
tests/handlers/: character_handler_test.cpp  chat_handler_test.cpp  combat_handler_test.cpp  item_handler_test.cpp  login_handler_test.cpp  movement_handler_test.cpp
tests/integration/: cross_map_test.cpp  db_integration_test.cpp  full_gameplay_test.cpp  map_event_integration_test.cpp  npc_boss_integration_test.cpp  npc_e2e_test.cpp  npc_interaction_test.cpp  protocol_integration_test.cpp  scene_manager_test.cpp
tests/mocks/: mock_socket.h
tests/server/: character_entity_manager_test.cc  character_factory_test.cc  combat_core_test.cpp  ecs_systems_test.cc  gateway_config_test.cc  gateway_error_handling_test.cc  gateway_forwarding_test.cc  gateway_full_flow_test.cc  gateway_heartbeat_test.cpp  gateway_integration_test.cc  gateway_performance_test.cc  gateway_routing_test.cc  gateway_server_test.cc  map_instance_test.cpp  map_instance_walk_test.cpp  map_loader_test.cpp  message_router_test.cc  movement_validator_test.cpp  tcp_connection_test.cpp  teleport_system_test.cpp  test_gateway.yaml
tools/png_metadata_generator/: CMakeLists.txt  main.cpp
tools/wil2png/: CMakeLists.txt  main.cpp  wil2png_desktop.bat
(+330 files in other folders)
